--- a/y1/aaa.ipynb
+++ b/y1/aaa.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "fe1d809e",
    "metadata": {},
    "outputs": [
@@ -38,9 +38,9 @@
       "['__doc__', '__file__', '__loader__', '__name__', '__package__', '__spec__', 'foo']\n",
       "['00000020', 'fd6e48ed', 'e352ab41', '0e2e630c', '24ec794f', '45c305a6', '2e587881', '9205913c', '04070000', 'ef98172c']\n",
       "['d4875576', '67f3dda3', '2d883747', '78c96b7d', '23b3f2c7', '36de8a37', '0258c01c', '5f628b68', '20b8181e', '47000040']\n",
-      "2.3878395557403564\n",
-      "d36edf39185118b67c30c88e6dff9b1ba8c74469bedbd3180e6d73a9e0f80c31\n",
-      "40000209 0004ffbf -1\n"
+      "0.9196128845214844\n",
+      "1e4f4021297ae9f68b99be2723ea1159075b98e9bb630d5ab8306bf28e5624c8\n",
+      "4000010f 0004ffbf -1\n"
      ]
     },
     {
@@ -49,7 +49,7 @@
        "'\\nData[ 0: 9]: 00000020 fd6e48ed e352ab41 0e2e630c 24ec794f 45c305a6 2e587881 9205913c 04070000 ef98172c\\nData[10:19]: d4875576 67f3dda3 2d883747 78c96b7d 23b3f2c7 36de8a37 0258c01c 5f628b68 20b8181e 46000040\\nHash[ 7: 0]: 0001b040 297e46bd 966c3765 382f2632 94735c9a f4c3742b 0a97a174 12f51e32\\nTarg[ 7: 0]: 00085555 55555555 80000000 00000000 ffffffff ffffffff ffffffff ffffffff\\n'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
     "ALGO = struct.pack(\"<I\", 10).hex()\n",
     "JOB_ID = int(\"EF32\", 16).to_bytes(4, byteorder='little').hex()\n",
     "MASK = struct.pack(\"<I\", 0x0004ffbf).hex()\n",
-    "COUNT = struct.pack(\"<I\", 450).hex()\n",
+    "COUNT = struct.pack(\"<I\", 200).hex()\n",
     "data_bin = ALGO + \\\n",
     "\t\t\t\t\t\t\tJOB_ID + \\\n",
     "\t\t\t\t\t\t\tinput_swap.hex() + \\\n",
@@ -128,19 +128,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ad4c2bbd",
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['42f89d6e', 'e0583f6c', 'f95039b2', '24e257a6', '23fd4e25', 'b8ff5dd6', '4a14ebba', '3ee97d85']\n",
+      "['00000020', '995a1192', '7aa23cef', 'f9d365f0', '4531811c', 'dd2c88f3', '7288a505', '689e6a57', '950cfb1f', '6e9df842']\n",
+      "['6c3f58e0', 'b23950f9', 'a657e224', '254efd23', 'd65dffb8', 'baeb144a', '857de93e', 'b9459468', '05140f1d', '200007f7']\n",
+      "0.9631614685058594\n",
+      "cae8ef3c8a13c4331577126084c30f4286b4c7cd7071aa9a0faefb1118ddc352\n",
+      "f70700e8 0004ffbf -1\n"
      ]
     }
    ],
@@ -200,7 +201,7 @@
     "ALGO = struct.pack(\"<I\", 11).hex()\n",
     "JOB_ID = int(\"EF32\", 16).to_bytes(4, byteorder='little').hex()\n",
     "MASK = struct.pack(\"<I\", 0x0004ffbf).hex()\n",
-    "COUNT = struct.pack(\"<I\", 1350).hex()\n",
+    "COUNT = struct.pack(\"<I\", 200).hex()\n",
     "data_bin = ALGO + \\\n",
     "\t\t\t\t\t\t\tJOB_ID + \\\n",
     "\t\t\t\t\t\t\tinput_swap.hex() + \\\n",
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "3357e6d3",
    "metadata": {},
    "outputs": [
@@ -231,8 +232,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Status Code: 200\n",
-      "{\"result\": \"True\", \"bin\": \"742b410af849387388cf5d38f2d4902895d42acf83946c6c05c0525da0750200\", \"no\": \"00000dff\", \"mask\": \"000275a0\"}\n"
+      "Status Code: 404\n",
+      "The deployment could not be found on Vercel.\n",
+      "DEPLOYMENT_NOT_FOUND\n",
+      "icn1::jqxhj-1755577833126-eda20730091a\n"
      ]
     }
    ],
